[gd_scene load_steps=2 format=3 uid="uid://bb7ndqq5jk8bh"]

[ext_resource type="Script" path="res://laser_gun/laser_gun.gd" id="1_fqf3t"]

[node name="LaserGun" type="Node2D"]
script = ExtResource( "1_fqf3t" )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
